Add SDK diagnostics to build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,14 @@ jobs:
       - name: Select Xcode
         run: sudo xcode-select -s /Applications/Xcode_16.2.app
 
+      - name: Show toolchain info
+        run: |
+          xcodebuild -version
+          swift --version
+          xcrun --show-sdk-path
+          xcrun --show-sdk-version
+          ls /Applications/ | grep Xcode
+
       - name: Build (debug)
         run: swift build
 
